--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,10 +1,13 @@
 _repo: A-Living-Lie_65887
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   translator:
     agent_name: Villiers, John de
     gutenberg_agent_id: '53537'
     url: http://www.gutenberg.org/2009/agents/53537
+covers:
+- cover_type: archival
+  image_path: 65887-h/images/living_cover.jpg
 creator:
   author:
     agent_name: Bourget, Paul
@@ -19,6 +22,8 @@ creator:
     - https://fr.wikipedia.org/wiki/Paul_Bourget
     - https://en.wikipedia.org/wiki/Paul_Bourget
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65887#A-Living-Lie
 gutenberg_issued: '2021-07-21'
 gutenberg_type: Text
 identifiers:
